# cub3d

./: .gitignore  Makefile  README.md  cub3d  map.cub  test.c  teste.c
.github/workflows/: gtests.yml  norminette.yml  valgrind.yml
MLX42/: CMakeCache.txt  Makefile  cmake_install.cmake
bonus/include/: cub3d_bonus.h
bonus/src/: main_bonus.c
bonus/src/cast/: raycast_bonus.c  spritecast_bonus.c
bonus/src/hooks/: hook_bonus.c  key_pressed_bonus.c  key_released_bonus.c  mouse_hook_bonus.c
bonus/src/init/: data_init_bonus.c  elements_init_bonus.c  image_init_bonus.c  map_init_bonus.c  player_init_bonus.c  sprites_init_bonus.c
bonus/src/render/: draw_image_bonus.c  (+6 more)
include/: cub3d.h
include/libft/: Makefile  ft_atoi_push.c  ft_atol.c  ft_lstnew_bonus.c  ft_putstr_fd.c  ft_strncmp.c  ft_utoa.c
includes/: cub3d.h
includes/libft/: Makefile  ft_atoi_push.c  ft_putendl_fd.c  ft_split.c  ft_split_fake.c  libft.h
libft/: libft.h
mandatory/include/: cub3d.h
mandatory/src/: main.c
maps/: borderWithZero2.cub  invalidColor.cub  invalidColor2.cub  invalidColorValue.cub  invalidDupPath.cub  invalidDupSceneInfo.cub  invalidExtraNewLine.cub  invalidWall.cub  invalidWallBotton.cub  invalidWallLeft.cub  invalidWallRight.cub  invalidWallTop.cub  map2.cub  validExtension..cub  validMap000colors.cub  validMap255colors.cub  validMap3.cub  validMultipleNewLines.cub  validPdfMap.cub
mlx/: mlx_int.h  mlx_new_window.m  mlx_xpm.c
mlx_linux/: mlx_init.c  mlx_xpm.c  mlx_xpm.c.ok
src/: check_arguments.c  create_image.c  cub3d.c  get_scene.c  hooks.c  main.c  utils.c
src/cast/: draw_ceil_wall_floor.c  draw_sprite.c  raycast.c  spritecast.c
src/hooks/: hook.c  key_pressed.c  key_release.c  key_released.c  mouse_hook.c
src/init/: data_init.c  elements_init.c  image_init.c  images_init.c  map_init.c  player_init.c  set_scene.c  sprites_init.c  texture_and_color_init.c
src/main/: cub3d.c  quit_program.c
src/mlx/: create_image.c  hooks.c  mlx_utils.c
src/rays/: cast.c  raycast.c  rays_init.c
src/render/: dda.c  draw_animation.c  draw_background.c  draw_ceil_and_floor.c  draw_ceil_wall_floor.c  draw_image.c  draw_sprite.c  draw_texture.c  draw_vertical_line.c  draw_wall_strip.c  put_pixel.c  render_line.c  render_tile.c  set_draw_info.c
src/scene/: build_scene.c  free_scene.c  get_scene.c  is_map_line.c  scene.c  set_colors.c  set_info.c  set_map.c  set_scene.c  validate_map.c
src/utils/: check_arguments.c  check_extension.c  error_handling.c  free_matrix.c  free_scene.c  is_map_line.c  is_wall_at.c  load_texture.c  print.c  quit_program.c  read_file.c  test.c  throw_error.c
src/validations/: validate_colors.c  validate_content.c  validate_grid.c
textures/xpm/: fire1.xpm  fire2.xpm  fire3.xpm
unitTests/: CMakeLists.txt
unitTests/InputTests/: CMakeLists.txt  InputTests.cpp
(+27 files in other folders)
